# pointless

./: .editorconfig  .release-it.json  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
.github/: FUNDING.yml
.github/workflows/: release.yml  tests.yml
.husky/: commit-msg
src/: constants.js  helpers.js  index.css  index.js  store.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.github/workflows/: build.yml
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  file.rs  main.rs  menu.rs
src/components/App/: index.js
src/components/FormCheckbox/: index.js  styles.module.css
src/components/FormSelect/: index.js  styles.module.css
src/components/InlineEdit/: index.js  styles.module.css
src/components/Menu/: index.js  styles.module.css
src/components/Modal/: index.js  styles.module.css
src/components/Paper/: Paper.js  constants.js  helpers.js  index.js  styles.module.css
src/components/Paper/components/ExportButton/: index.js  styles.module.css
src/components/Paper/components/HelpButton/: index.js  styles.module.css
src/components/Paper/components/Info/: index.js  styles.module.css
src/components/Paper/components/InfoButton/: index.js  styles.module.css
src/components/Sortable/: index.js  styles.module.css
src/components/ToggleDarkMode/: index.js  styles.module.css
src/reducers/paper/: paperSlice.js
src/reducers/router/: routerSlice.js
src/reducers/settings/: settingsSlice.js
src/selectors/paper/: get-current-paper.js  get-folder.js  get-paper-id.js
src/utils/: paper-export.js
(+5 files in other folders)
