[package]
name = "pointless"
version = "0.1.0"
description = "An endless drawing canvas."
authors = ["Kim 金可明 <koomen@pm.me>"]
license = "MIT"
repository = "git@github.com:kkoomen/pointless.git"
default-run = "pointless"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.7", features = ["api-all"] }
dark-light = "0.2.2"
brotli = "3.3.4"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
